--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,23 @@
-*.py[co]
-
-# Packages
-*.egg
-*.egg-info
-dist
+*.pyc
+*~
+*.scssc
+*.swp
+*.orig
+*.DS_Store
+:2e_*
+:2e#
+.AppleDouble
+database.sqlite
+courseware/static/js/mathjax/*
+db.newaskbot
+db.oldaskbot
+flushdb.sh
 build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
 .coverage
-.tox
-
-#Translations
-*.mo
-
-#Mr Developer
-.mr.developer.cfg
+coverage.xml
+cover/
+log/
+reports/
+/src/
+\#*\#
+*.egg-info
