--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-Django >= 1.4, < 1.5
-pika
+Django==1.4.1
+pika==0.9.5
 django_nose
 nosexcover
 rednose
-requests
-boto
+requests==0.14.1
+boto==2.2.2
 path.py
-dogstatsd-python
-south
-anyjson
-numpy
-lxml
-newrelic
+dogstatsd-python==0.2.1
+south==0.7.6
+MySQL-python==1.2.3
+newrelic==1.5.0.103
