--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Django==1.4.1
-pika==0.9.5
+Django >= 1.4, < 1.5
+pika
 django_nose
 nosexcover
 rednose
@@ -7,6 +7,8 @@ requests==0.14.1
 boto==2.2.2
 path.py
 dogstatsd-python==0.2.1
-south==0.7.6
-MySQL-python==1.2.3
+south
+anyjson==0.3.3
+numpy==1.6.2
+lxml==2.3.6
 newrelic==1.5.0.103
