--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-Django >= 1.4, < 1.5
+django==1.4.8
 pika
 django_nose
 nosexcover
 rednose
 requests==0.14.1
-boto==2.6.0
+boto==2.13.3
 path.py
 dogstatsd-python==0.2.1
 south
 anyjson==0.3.3
 numpy==1.6.2
 lxml==2.3.6
-newrelic==1.5.0.103
+newrelic==2.4.0.4
